--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,27 +132,37 @@ hr {
   width: 100%;
   max-height: 50px;
   margin: auto;
-  border-color: #e7e7e7;
+  border: 0px;
   min-height: 45px;
   background: #fff;
   margin-bottom: 30px;
-  font-family: "Montserrat", sans-serif; }
-  .navbar a {
-    color: #0099cc !important;
-    font-size: 16px;
-    letter-spacing: -0.5px;
-    padding-bottom: 14px;
-    padding-top: 20px;
-    text-align: center; }
-  .navbar img {
-    width: 110px; }
-  .navbar .navbar-brand {
-    padding-top: 10px; }
-  .navbar .nav-highlight {
-    color: #cc0000 !important; }
+  font-family: "Montserrat", sans-serif; 
+}
+
+.navbar a {
+  color: #0099cc !important;
+  font-size: 16px;
+  letter-spacing: -0.5px;
+  padding-bottom: 14px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.navbar img {
+  width: 110px; 
+}
+
+.navbar .navbar-brand {
+  padding-top: 10px; 
+}
+
+.navbar .nav-highlight {
+  color: #cc0000 !important;
+}
 
 .navbar-default .navbar-collapse {
-  background: rgba(255, 255, 255, 0.85); }
+  background: rgba(255, 255, 255, 0.85);
+}
 
 .footer-main {
   background: #2b5464;
@@ -166,6 +176,7 @@ hr {
 ul footer-main {
 	list-style: none;
 }
+
 li {
 	list-style: none;
 }
@@ -176,7 +187,7 @@ li {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #fff !important;
-  background-color: $primary-color !important;
+  background-color: #0099cc !important;
 }
 
 
