looked up color scheme for Power Up TA

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,14 @@
+/**
+ * Power Up TA Color Scheme
+ *  RED: #cc0000
+ *  BLUE: #0099cc  
+ *  PALE GREY: #e4eef2
+ *  COBALT: #2b5464
+ *  WHITE: #fff
+ *  LIGHT BLUE / TORQUOISE: #4db8db
+ *  DARK GREY: #666666
+ **/
+ 
 .curr-list {
 	background-color: #fff;
 }
