--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}	
-<header class="header-main">
+<header class="header-main" ng-controller="DropdownCtrl">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -14,17 +14,23 @@
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li id="menu-home"><a href={% url 'home' %}>LMS Home</a></li>
-					<li id="menu-tools" class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tools<span class="caret"></span></a>
-						<ul class="dropdown-menu">
+					<li id="menu-tools" class="dropdown" dropdown is-open="status.isopen1">
+						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
+							Tools
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu" role="menu">
 							<li id="menu-tools-scratch"><a href="http://scratch.mit.edu/">Scratch</a></li>
 							<li id="menu-tools-scratchjr"><a href="http://www.scratchjr.org/">Scratch Jr.</a></li>
 							<li id="menu-tools-python"><a href="https://www.python.org/">Python</a></li>
 							<li id="menu-tools-bootstrap"><a href="http://getbootstrap.com/">Bootstrap</a></li>
 						</ul>
 					</li>
-					<li id="menu-powerup" class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Power Up TA<span class="caret"></span></a>
+					<li id="menu-powerup" class="dropdown" dropdown is-open="status.isopen2">
+						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
+							Power Up TA
+							<span class="caret"></span>
+						</a>
 						<ul class="dropdown-menu">
 							<li id="menu-powerup-home"><a href="http://powerupta.com/">Power Up TA</a></li>
 							<li id="menu-powerup-resources"><a href="http://powerupta.com/resources.html">Resources</a></li>
@@ -32,8 +38,11 @@
 							<li id="menu-powerup-register"><a href="http://powerupta.com/register.html">Class Registration</a></li>
 						</ul>
 					</li>
-					<li id="menu-lms" class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LMS Tools<span class="caret"></span></a>
+					<li id="menu-lms" class="dropdown" dropdown is-open="status.isopen3">
+						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
+							LMS Tools
+							<span class="caret"></span>
+						</a>
 						<ul class="dropdown-menu">
 							<li id="menu-lms-"><a>Student Dashboard</a></li>
 							<li id="menu-lms-"><a>Student Account Manager</a></li>
