--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,37 +1,36 @@
-		
-	<footer class="footer-main">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-4">
-					<h4>Our community</h4>
-					<ul>
-						<li><a href="http://facebook.com/powerupta" target="_new">Facebook</a></li>
-						<li><a href="http://twitter.com/tamasintweets" target="_new">Twitter</a></li>
-					</ul>
-				</div>
-				<div class="col-xs-4">
-					<h4>About</h4>
-					<ul>
-						<li><a href="about.html">Who we are</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
-						<li><a href="hiring.html">Jobs</a></li>
-						<li><a href="webdev.html">Web Development</a></li>
-					</ul>
-				</div>
-				<div class="col-xs-4">
-					<h4>Classes</h4>
-					<ul>
-						<li><a href="classes.html">Weekly classes</a></li>
-						<li><a href="camps.html">Summer Camps</a></li>
-						<!--<li><a href="register.htl">Registration</a></li>-->
-						<li><a href="partnerships.html">Partnerships</a></li>
-					</ul>
-				</div>
+<footer class="footer-main">
+	<div class="container">
+		<div class="row no-pad">
+			<div class="col-xs-4">
+				<h4>Our community</h4>
+				<ul>
+					<li><a href="http://facebook.com/powerupta" target="_new">Facebook</a></li>
+					<li><a href="http://twitter.com/powerupta" target="_new">Twitter</a></li>
+				</ul>
 			</div>
-			<div class="row extra-pad-top">
-				<div class="col-md-12">
-					<p class="copyright">Copyright &copy; 2015 Power Up Tech Academy - All Rights Reserved.</p>
-				</div>
+			<div class="col-xs-4">
+				<h4>About</h4>
+				<ul>
+					<li><a href="http://powerupta.com/about.html" target="_new">Who we are</a></li>
+					<li><a href="http://powerupta.com/contact.html" target="_new">Contact Us</a></li>
+					<li><a href="http://powerupta.com/hiring.html" target="_new">Jobs</a></li>
+					<li><a href="http://powerupta.com/webdev.html" target="_new">Web Development</a></li>
+				</ul>
+			</div>
+			<div class="col-xs-4">
+				<h4>Classes</h4>
+				<ul>
+					<li><a href="http://powerupta.com/classes.html" target="_new">Weekly classes</a></li>
+					<li><a href="http://powerupta.com/summercamps.html" target="_new">Summer Camps</a></li>
+					<li><a href="http://powerupta.com/register.html" target="_new">Registration</a></li>
+					<li><a href="http://powerupta.com/partnerships.html" target="_new">Partnerships</a></li>
+				</ul>
 			</div>
 		</div>
-	</footer>
+		<div class="row extra-pad-top">
+			<div class="col-md-12">
+				<p class="copyright">Copyright &copy; 2015 Power Up Tech Academy - All Rights Reserved.</p>
+			</div>
+		</div>
+	</div>
+</footer>
