updated copyright to use small tag instead of p tag

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -28,8 +28,8 @@
 			</div>
 		</div>
 		<div class="row extra-pad-top">
-			<div class="col-md-12">
-				<p class="copyright">Copyright &copy; 2015 Power Up Tech Academy - All Rights Reserved.</p>
+			<div class="col-md-12 copyright">
+				<small >Copyright &copy; 2015 Power Up Tech Academy - All Rights Reserved.</small>
 			</div>
 		</div>
 	</div>
