changed hrefs with target=_new to _blank

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,10 +20,10 @@
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu" role="menu">
-							<li id="menu-tools-scratch"><a href="http://scratch.mit.edu/">Scratch</a></li>
-							<li id="menu-tools-scratchjr"><a href="http://www.scratchjr.org/">Scratch Jr.</a></li>
-							<li id="menu-tools-python"><a href="https://www.python.org/">Python</a></li>
-							<li id="menu-tools-bootstrap"><a href="http://getbootstrap.com/">Bootstrap</a></li>
+							<li id="menu-tools-scratch"><a href="http://scratch.mit.edu/" target="_blank">Scratch</a></li>
+							<li id="menu-tools-scratchjr"><a href="http://www.scratchjr.org/" target="_blank">Scratch Jr.</a></li>
+							<li id="menu-tools-python"><a href="https://www.python.org/" target="_blank">Python</a></li>
+							<li id="menu-tools-bootstrap"><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
 						</ul>
 					</li>
 					<li id="menu-powerup" class="dropdown" dropdown is-open="status.isopen2">
@@ -32,10 +32,10 @@
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-							<li id="menu-powerup-home"><a href="http://powerupta.com/">Power Up TA</a></li>
-							<li id="menu-powerup-resources"><a href="http://powerupta.com/resources.html">Resources</a></li>
+							<li id="menu-powerup-home"><a href="http://powerupta.com/" target="_blank">Power Up TA</a></li>
+							<li id="menu-powerup-resources"><a href="http://powerupta.com/resources.html" target="_blank">Resources</a></li>
 							<li id="menu-powerup-projects"><a>Project Ideas</a></li>
-							<li id="menu-powerup-register"><a href="http://powerupta.com/register.html">Class Registration</a></li>
+							<li id="menu-powerup-register"><a href="http://powerupta.com/register.html" target="_blank">Class Registration</a></li>
 						</ul>
 					</li>
 					<li id="menu-lms" class="dropdown" dropdown is-open="status.isopen3">
