--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,26 +4,26 @@
 			<div class="col-xs-4">
 				<h4>Our community</h4>
 				<ul>
-					<li><a href="http://facebook.com/powerupta" target="_new">Facebook</a></li>
-					<li><a href="http://twitter.com/powerupta" target="_new">Twitter</a></li>
+					<li><a href="http://facebook.com/powerupta" target="_blank">Facebook</a></li>
+					<li><a href="http://twitter.com/powerupta" target="_blank">Twitter</a></li>
 				</ul>
 			</div>
 			<div class="col-xs-4">
 				<h4>About</h4>
 				<ul>
-					<li><a href="http://powerupta.com/about.html" target="_new">Who we are</a></li>
-					<li><a href="http://powerupta.com/contact.html" target="_new">Contact Us</a></li>
-					<li><a href="http://powerupta.com/hiring.html" target="_new">Jobs</a></li>
-					<li><a href="http://powerupta.com/webdev.html" target="_new">Web Development</a></li>
+					<li><a href="http://powerupta.com/about.html" target="_blank">Who we are</a></li>
+					<li><a href="http://powerupta.com/contact.html" target="_blank">Contact Us</a></li>
+					<li><a href="http://powerupta.com/hiring.html" target="_blank">Jobs</a></li>
+					<li><a href="http://powerupta.com/webdev.html" target="_blank">Web Development</a></li>
 				</ul>
 			</div>
 			<div class="col-xs-4">
 				<h4>Classes</h4>
 				<ul>
-					<li><a href="http://powerupta.com/classes.html" target="_new">Weekly classes</a></li>
-					<li><a href="http://powerupta.com/summercamps.html" target="_new">Summer Camps</a></li>
-					<li><a href="http://powerupta.com/register.html" target="_new">Registration</a></li>
-					<li><a href="http://powerupta.com/partnerships.html" target="_new">Partnerships</a></li>
+					<li><a href="http://powerupta.com/classes.html" target="_blank">Weekly classes</a></li>
+					<li><a href="http://powerupta.com/summercamps.html" target="_blank">Summer Camps</a></li>
+					<li><a href="http://powerupta.com/register.html" target="_blank">Registration</a></li>
+					<li><a href="http://powerupta.com/partnerships.html" target="_blank">Partnerships</a></li>
 				</ul>
 			</div>
 		</div>
