--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -24,7 +24,7 @@
 					<div class="col-xs-1 col-center icon-pad-top">
 						<i class="fa fa-globe fa-lg"></i>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-sm-3 light-pad-top">
 						<h5 class="">{{curriculum.name}}</h5>
 					</div>
 					<div class="col-sm-8">
@@ -44,42 +44,52 @@
 						<img ng-src = "{{tag.logo}}">
 					</div>
 				-->
-
-				<div class="" ng-repeat="relationship in curriculum.activities">
-					<accordion id="activity-accordion" close-others="oneAtATime">
-						<div class="row no-pad">
-							<div class="col-xs-offset-1 col-xs-1 col-center icon-pad-top">
-								<div ng-show="{{relationship.activity.category == 'Offline'}}">
-									<i class="fa fa-pencil fa-lg"></i>
+						<div class="" ng-repeat="relationship in curriculum.activities">
+							<div class="row">
+								<div class="col-xs-offset-1 col-xs-2" ng-switch on="relationship.activity.category">
+									<!-- Show appropriate logo for curriculum type -->
+									<span ng-switch-when="Offline">
+										<i class="fa fa-pencil fa-fw fa-md icon-pad-top"></i>
+									</span>
+									<span ng-switch-when="Online">
+										<i class="fa fa-laptop fa-fw fa-md icon-pad-top"></i>
+									</span>
+									<span ng-switch-when="Discussion">
+										<i class="fa fa-users fa-fw fa-md icon-pad-top"></i>
+									</span>
+									<span class="icon-label">{{relationship.activity.category}}</span>
 								</div>
-								<div ng-show="{{relationship.activity.category == 'Online'}}">
-									<i class="fa fa-laptop fa-lg"></i>
+								<div class="col-xs-1 col-center">
+									<span ng-show="notEmpty('{{relationship.activity.image}}')">
+										<img ng-src="{{relationship.activity.image}}" class="icon-pad-top img-thumbnail img-responsive">
+									</span>
 								</div>
-								<div ng-show="{{relationship.activity.category == 'Discussion'}}">
-									<i class="fa fa-users fa-lg"></i>
+								<div class="col-xs-7">
+									<h4>{{relationship.activity.name}}</h4>
+									<p>{{relationship.activity.description}}</p>
+									<p>{{relationship.activity.teaching_notes}}</p>
 								</div>
-							</div>
-							<div class="col-xs-2">
-								<h5>{{relationship.activity.category}}</h5>
-							</div>
-							<div class="col-xs-7">
-							<h5 class="">{{relationship.activity.name}}</h5>
-								<p>{{relationship.activity.description}}</p>
-							</div>
-							<div class="col-xs-1">
-							<accordion-group id="activity-accordion-group" heading="Details">
-							<ul>
-								<li><strong>Teaching notes:</strong> {{relationship.activity.teaching_notes}}</li>
-								<li><strong>Video:</strong> {{relationship.activity.video_url}}</li>
-								<li><strong>Image:</strong> {{relationship.activity.image[0]}}</li>
-								<li><strong>Materials:</strong> {{relationship.activity.relationships}}</li>
-								<li><strong>Resources:</strong> {{relationship.activity.relationships}}</li>
-								<li><strong>Related:</strong> {{relationship.activity.relationships}}</li>
-							</ul>
-						</accordion-group>
-						</div>
+								<div class="col-xs-1">
+									<span class="pull-right icon-pad-top">
+										<span ng-show="notEmpty('{{relationship.activity.video_url}}')">
+											<a href="{{relationship.activity.video_url}}" target="_blank" ><i class="fa fa-youtube-play fa-md"></i></a>
+										</span>
+										<span ng-show="notEmpty({{relationship.activity.materials}})">
+											<!-- TODO: Modal window with materials-->
+											<a href="#materials" target="_blank" ><i class="fa fa-file-o fa-md"></i></a>
+										</span>
+										<span ng-show="notEmpty({{relationship.activity.resources}})">
+											<!-- TODO: Modal window with resources / helpful tips-->
+											<a href="#tips" target="_blank" ><i class="fa fa-question-circle fa-md"></i></a>
+										</span>
+										<span ng-show="notEmpty({{relationship.activity.relationships}})">
+											<!-- TODO: Modal window with related activities. Can open in new window or jump to appropriate section-->
+											<a href="#related" target="_blank" ><i class="fa fa-plus fa-md"></i></a>
+										</span>
+									</span>
+								</div>
 					</div>
-				</accordion>
+						<hr class="no-margin">
 			</div>
 		</accordion-group>
 		<div class="row no-pad">
