updated styling on new curriculum button

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -101,9 +101,7 @@
 </div>
 
 <div class="container no-pad" class="stposition">
-	<span class="pull-right icon-pad-top">
-		<i class="btn btn-default fa fa-plus-circle fa-btn" ng-click="open()"></i>
-	</span>
+	<i class="pull-right btn fa fa-plus-circle fa-btn" ng-click="open()"></i>
 </div>
 
 </div>
