--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,59 +1,61 @@
-{% load staticfiles %}	
+{% load staticfiles %}
 <header class="header-main" ng-controller="DropdownCtrl">
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href={% url 'home' %}><img src="{% static "img/powerup_small.png" %}" class="nav-logo"></a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li id="menu-home"><a href={% url 'home' %}>LMS Home</a></li>
-					<li id="menu-tools" class="dropdown" dropdown is-open="status.isopen1">
-						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
-							Tools
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu" role="menu">
-							<li id="menu-tools-scratch"><a href="http://scratch.mit.edu/" target="_blank">Scratch</a></li>
-							<li id="menu-tools-scratchjr"><a href="http://www.scratchjr.org/" target="_blank">Scratch Jr.</a></li>
-							<li id="menu-tools-python"><a href="https://www.python.org/" target="_blank">Python</a></li>
-							<li id="menu-tools-bootstrap"><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
-						</ul>
-					</li>
-					<li id="menu-powerup" class="dropdown" dropdown is-open="status.isopen2">
-						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
-							Power Up TA
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li id="menu-powerup-home"><a href="http://powerupta.com/" target="_blank">Power Up TA</a></li>
-							<li id="menu-powerup-resources"><a href="http://powerupta.com/resources.html" target="_blank">Resources</a></li>
-							<li id="menu-powerup-projects"><a>Project Ideas</a></li>
-							<li id="menu-powerup-register"><a href="http://powerupta.com/register.html" target="_blank">Class Registration</a></li>
-						</ul>
-					</li>
-					<li id="menu-lms" class="dropdown" dropdown is-open="status.isopen3">
-						<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
-							LMS Tools
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li id="menu-lms-"><a>Student Dashboard</a></li>
-							<li id="menu-lms-"><a>Student Account Manager</a></li>
-							<li id="menu-lms-"><a>DevLog</a></li>
-							<li id="menu-lms-"><a>Instructor Dashboard</a></li>
-							<li id="menu-lms-"><a>Lessons</a></li>
-							<li id="menu-lms-"><a>Sessions</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div><!--/.nav-collapse -->
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" ng-click="navbarCollapsed = !navbarCollapsed">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href={% url 'home' %}>
+				<img src="{% static "img/powerup_small.png" %}" class="nav-logo">
+			</a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div id="navbar" class="collapse navbar-collapse" collapse="navbarCollapsed">
+			<ul class="nav navbar-nav">
+				<li id="menu-home"><a href={% url 'home' %}>LMS Home</a></li>
+				<li id="menu-tools" class="dropdown" dropdown is-open="status.isopen1">
+					<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
+						Tools
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu" role="menu">
+						<li id="menu-tools-scratch"><a href="http://scratch.mit.edu/" target="_blank">Scratch</a></li>
+						<li id="menu-tools-scratchjr"><a href="http://www.scratchjr.org/" target="_blank">Scratch Jr.</a></li>
+						<li id="menu-tools-python"><a href="https://www.python.org/" target="_blank">Python</a></li>
+						<li id="menu-tools-bootstrap"><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+					</ul>
+				</li>
+				<li id="menu-powerup" class="dropdown" dropdown is-open="status.isopen2">
+					<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
+						Power Up TA
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li id="menu-powerup-home"><a href="http://powerupta.com/" target="_blank">Power Up TA</a></li>
+						<li id="menu-powerup-resources"><a href="http://powerupta.com/resources.html" target="_blank">Resources</a></li>
+						<li id="menu-powerup-projects"><a>Project Ideas</a></li>
+						<li id="menu-powerup-register"><a href="http://powerupta.com/register.html" target="_blank">Class Registration</a></li>
+					</ul>
+				</li>
+				<li id="menu-lms" class="dropdown" dropdown is-open="status.isopen3">
+					<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" dropdown-toggle ng-disabled="disabled">
+						LMS Tools
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li id="menu-lms-"><a>Student Dashboard</a></li>
+						<li id="menu-lms-"><a>Student Account Manager</a></li>
+						<li id="menu-lms-"><a>DevLog</a></li>
+						<li id="menu-lms-"><a>Instructor Dashboard</a></li>
+						<li id="menu-lms-"><a>Lessons</a></li>
+						<li id="menu-lms-"><a>Sessions</a></li>
+					</ul>
+				</li>
+			</ul>
 		</div>
 	</nav>
 </header>
