--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -34,16 +34,11 @@
 						</span>
 						<h5 class="">Grades {{curriculum.lower_grade}}-{{curriculum.upper_grade}}, {{curriculum.tagline}}</h5>
 						<p class="">{{curriculum.description}}</p>
-						<div ng-show="{{curriculum.tags[0]}}">
-							<img ng-src="{{curriculum.tags[0].logo}}" alt="curriculum.tags[0].name" class="img-thumbnail img-responsive">
-						</div>
+						<span ng-show="notEmpty({{curriculum.tags}})" ng-repeat="tag in curriculum.tags">
+							<img ng-src="{{tag.logo}}" alt="tag.name" class="img-thumbnail img-responsive">
+						</span>
 					</div>
 					<accordion-group id="curr-accordion-group" heading="Lessons">
-					<!--
-					<div class="" ng-repeat="tag in curriculum.tags">
-						<img ng-src = "{{tag.logo}}">
-					</div>
-				-->
 						<div class="" ng-repeat="relationship in curriculum.activities">
 							<div class="row">
 								<div class="col-xs-offset-1 col-xs-2" ng-switch on="relationship.activity.category">
@@ -68,6 +63,9 @@
 									<h4>{{relationship.activity.name}}</h4>
 									<p>{{relationship.activity.description}}</p>
 									<p>{{relationship.activity.teaching_notes}}</p>
+									<span ng-show="notEmpty({{relationship.activity.tags}})" ng-repeat="tag in relationship.activity.tags">
+										<img ng-src="{{tag.logo}}" alt="tag.name" class="img-thumbnail img-responsive">
+									</span>
 								</div>
 								<div class="col-xs-1">
 									<span class="pull-right icon-pad-top">
