--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,10 +9,6 @@
  *  DARK GREY: #666666
  **/
 
-.curr-list {
-	background-color: #fff;
-}
-
 body {
 	background-color: #eeeeee;
   font-family: "Montserrat", sans-serif; 
@@ -36,6 +32,17 @@ hr {
 	padding-top: 10px;
 }
 
+/* Sections */
+.curr-list {
+  background-color: #fff;
+}
+
+.notes {
+  font-style: italic;
+  font-weight: 100;
+}
+
+/* Icons */
 .fa-md {
 	font-size: 2.0rem !important;
 	color: #bbbbbb;
@@ -62,6 +69,7 @@ hr {
 	line-height: 1;
 }
 
+/* Modal window */
 .modal-dialog {
 	position:fixed;
 	bottom:0%;
