--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -38,7 +38,7 @@
 							<img ng-src="{{tag.logo}}" alt="tag.name" class="img-thumbnail img-responsive">
 						</span>
 					</div>
-					<accordion-group id="curr-accordion-group" heading="Lessons">
+					<accordion-group id="activity-group" heading="Lessons">
 						<div class="" ng-repeat="relationship in curriculum.activities">
 							<div class="row">
 								<div class="col-xs-offset-1 col-xs-2" ng-switch on="relationship.activity.category">
