--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,7 +67,7 @@ hr {
   padding-top: 0px;
 }
 
-/* Icons */
+/* Icons and Buttons */
 .fa-md {
 	font-size: 2.0rem !important;
 	color: #bbbbbb;
@@ -82,6 +82,14 @@ hr {
   color: #bbbbbb;
 }
 
+#add-activity {
+  color: #cc0000;
+}
+
+#add-curriculum {
+  color: #0099cc;
+}
+
 .fa-btn,
 .fa-btn:focus,
 .fa-btn.focus,
@@ -90,8 +98,7 @@ hr {
 .fa-btn:hover
 {
 	font-size: 3.0rem !important;
-	color: #0099cc !important;
-	line-height: 1;
+	line-height: 1.5;
 }
 
 /* Modal window */
