--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -59,7 +59,7 @@
 				</div>
 				<br>
 				<br>
-				<button class="btn btn-primary pull-right" ng-click="save()">Add Curriculum</button>
+				<button class="btn btn-primary pull-right" ng-click="save()">Add Activity</button>
 				<br>
 				<br>
 				<p ng-repeat="(name, errs) in errors" class="alert alert-danger"><strong>{{ name }}</strong>: {{ errs.join(', ') }}</p>
