created new activity form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,11 @@ button {
 }
 
 /* Forms */
-#newCurriculumName, #newCurriculumDesc, #newCurriculumTagline, #newCurriculumLowerGrade, #newCurriculumUpperGrade, #newCurriculumActivities {
+#new-curr-form .form-fixed-width {
+  width: 570px;
+}
+
+#new-activity-form .form-fixed-width {
   width: 570px;
 }
 
